# Prime

./: .gitmodules  CMakeLists.txt
Prime/: CMakeLists.txt
Prime/src/: pch.h  prime.h
Prime/src/Core/: Application.h  Core.h  EntryPoint.cpp  Log.cpp  Log.h  PlatformDetection.h  Window.cpp  Window.h
Prime/src/Events/: ApplicationEvents.h  Events.cpp  Events.h  KeyCode.h  KeyEvents.h  MouseCode.h  MouseEvents.h
Prime/src/Platform/: WindowsWindow.cpp  WindowsWindow.h
Prime/src/Platform/OpenGL/: OpenGLBuffers.cpp  OpenGLBuffers.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLMesh.cpp  OpenGLMesh.h  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSwapchain.cpp  OpenGLSwapchain.h
Prime/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Prime/src/Renderer/: Buffers.cpp  Buffers.h  Context.cpp  Context.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h
SandBox/: CMakeLists.txt
SandBox/src/: main.cpp
