cmake_minimum_required(VERSION 3.29)
project(Prime)
include_directories(../deps/glfw/include)
include_directories(Prime src/)
include_directories(Prime ../deps/spdlog/include)
file(GLOB_RECURSE CORE_SRC src/Core/*.cpp src/Core/*.h)
file(GLOB_RECURSE PLATFORM_SRC src/Platform/*.cpp src/Platform/*.h)
file(GLOB_RECURSE EVENTS_SRC src/Events/*.cpp src/Events/*.h)
file(GLOB SRC src/*.cpp src/*.h)
add_library(Prime ${CORE_SRC} ${PLATFORM_SRC} ${EVENTS_SRC} ${SRC})
source_group("Core" FILES ${CORE_SRC})
source_group("Platform" FILES ${PLATFORM_SRC})
source_group("Events" FILES ${EVENTS_SRC})