cmake_minimum_required(VERSION 3.29)
project(Prime)
include_directories(../deps/glad/include)
include_directories(../deps/glfw/include)
include_directories(Prime src/)
include_directories(Prime ../deps/spdlog/include)

file(GLOB_RECURSE CORE_SRC src/Core/*.cpp src/Core/*.h)
file(GLOB_RECURSE WND_PLATFORM_SRC src/Platform/Windows/*.cpp src/Platform/Windows/*.h)
file(GLOB_RECURSE OPENGL_PLATFORM_SRC src/Platform/OpenGL/*.cpp src/Platform/OpenGL/*.h)
file(GLOB_RECURSE EVENTS_SRC src/Events/*.cpp src/Events/*.h)
file(GLOB_RECURSE RENDERER_SRC src/Renderer/*.cpp src/Renderer/*.h)

file(GLOB SRC src/*.cpp src/*.h)
add_library(Prime ${CORE_SRC} ${OPENGL_PLATFORM_SRC} ${RENDERER_SRC} ${WND_PLATFORM_SRC} ${EVENTS_SRC} ${SRC})
source_group("Core" FILES ${CORE_SRC})
source_group("Events" FILES ${EVENTS_SRC})
source_group("Renderer" FILES ${RENDERER_SRC})
source_group("Platform/Windows" FILES ${WND_PLATFORM_SRC})
source_group("Platform/OpenGL" FILES ${OPENGL_PLATFORM_SRC})